# euroleague_scrapping

./: .gitignore  .travis.yml  AUTHORS  ChangeLog  MANIFEST  Pipfile  README.md  README.rst  publish.sh  requirements.txt  setup.cfg  setup.py
euroleague_scrapping/: Euroscrapper.py  example.py  utils.py
