# Type of python distribution
[bdist_wheel]
universal=0

[metadata]
# App name
name = Euroleague and Eurocup scrapping
# Who made it?
author = Newstats.eu
# Do I really need to explain the following?
author_email = euroleague.dataguy@gmail.com
# The short description of your app
summary = Euroleague and Eurocup scrapping
# License type
description-file =
    README.rst
# Where can I access the project?
home-page = https://github.com/newstatseu/euroleague-scrapping
# Which version of Python does it need to run?
python_requires = >=3.6
# How do you classify your app? https://pypi.python.org/pypi?%3Aaction=list_classifiers
; classifier =
;     Development Status :: 4 - Beta
;     Environment :: Other Environment
;     Intended Audience :: Education
;     Operating System :: MacOS :: MacOS X
;     Operating System :: Microsoft :: Windows
;     Operating System :: POSIX
;     Programming Language :: Python :: 3 :: Only
;     Programming Language :: Python :: 3.6
;     Programming Language :: Python :: Implementation :: CPython
;     Topic :: Education

# Automatically find root package
[options]
packages = find: